crates/jarl-cli/tests/integration/snapshots/integration__allow_no_vcs__no_git_repo_allow_no_vcs.snap
---
source: crates/jarl-cli/tests/integration/allow_no_vcs.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--fix\").arg(\"--allow-no-vcs\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --fix --allow-no-vcs
