crates/jarl-cli/tests/integration/snapshots/integration__allow_no_vcs__no_git_repo_blocks_fix.snap
---
source: crates/jarl-cli/tests/integration/allow_no_vcs.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--fix\").run().normalize_os_executable_name()"
---
success: false
exit_code: 255
----- stdout -----

----- stderr -----
Error: no Version Control System (e.g. Git) found for this package and `jarl check --fix` can potentially perform destructive changes; if you'd like to suppress this error pass `--allow-no-vcs`

----- args -----
check . --fix
